# apertium-azz

./: Makefile  Makefile.am  README.md  apertium-azz.azz.lexc  apertium-azz.azz.rlx  apertium-azz.azz.spellrelax  apertium-azz.azz.tagged  apertium-azz.azz.twol  apertium-azz.azz.udx  apertium-azz.pc.in  azz.prob  configure.ac  modes.xml
corpora/: Chilc_Botan_RMM302-MSO325_mowih-Acanthaceae.dep  Chilc_Botan_RMM302-MSO325_mowih-Acanthaceae.seg  Chilc_Botan_RMM302_tsonsasa-Tiliaceae.dep  Chilc_Botan_RMM302_tsonsasa-Tiliaceae.seg  Tecol_Botan_LOS358-CGN309_tiookowit-Meliaceae.dep  Tecol_Botan_LOS358-CGN309_tiookowit-Meliaceae.seg  Tzina_Botan_AND308-JVC313_wehwei-kwiikwilehkaw-Smallanthus-Asteraceae.dep  Tzina_Botan_AND308-JVC313_wehwei-kwiikwilehkaw-Smallanthus-Asteraceae.seg  Tzina_Botan_AND308_waawkilit-Amaranthaceae.dep  Tzina_Botan_AND308_waawkilit-Amaranthaceae.seg  Tzina_Botan_JVC313-AND308_chapolistit-Verbenaceae.dep  Tzina_Botan_JVC313-AND308_chapolistit-Verbenaceae.seg  Tzina_Botan_JVC313-AND308_tepeetomat-Moraceae.dep  Tzina_Botan_JVC313-AND308_tepeetomat-Moraceae.seg  Tzina_Botan_JVC313_tomakilit-Solanaceae.dep  Tzina_Botan_JVC313_tomakilit-Solanaceae.seg  Tzina_Botan_MSO325-RMM302_taatapiits-Apiaceae.dep  Tzina_Botan_MSO325-RMM302_taatapiits-Apiaceae.seg  Tzina_Botan_MSO325_chiichiwalaayoot-Apocynaceae.dep  Tzina_Botan_MSO325_chiichiwalaayoot-Apocynaceae.seg  Tzina_Botan_MSO325_kakatekowit-Anacardiaceae.dep  Tzina_Botan_MSO325_kakatekowit-Anacardiaceae.seg  Xalpn_Botan_CVH329_siitaltomat-Solanaceae.dep  Xalpn_Botan_CVH329_siitaltomat-Solanaceae.seg  Xaltn_Botan_MFC307_tanokwilpahxiwit-Verbenaceae.dep  Xaltn_Botan_MFC307_tanokwilpahxiwit-Verbenaceae.seg  Yohua_Botan_MJT354-ADA300_kanoones-Annonaceae.dep  Yohua_Botan_MJT354-ADA300_kanoones-Annonaceae.seg  Yohua_Botan_MJT354_tahkuiloolkowit-Bombacaceae.dep  Yohua_Botan_MJT354_tahkuiloolkowit-Bombacaceae.seg  azz_itml-ud-test.conllu  baby.tsv  clase.tsv  convert.sh  kiteixmatiltijtok-tamachilis.dep  kiteixmatiltijtok-tamachilis.seg  kiteixmatiltijtok-tamachilis.vislcg  kiteixmatiltijtok-tamachilis.vislcg3  random.tsv  targets.txt
dev/: Makefile  check-multichars.sh  countstems.sh
eval/: src.100  src.100.unk
scripts/: Audio_FIle_generation_script.py
